Fishing bot v1 - reequip fishing pole parts